# Comet

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Comet.exvim  Notes.md  README.md  makefile  mergedPatternsShower
benchmarks/dijkstra/: dijkstra.c  makefile
benchmarks/matmul/: makefile
benchmarks/qsort/: qsort.c
catapult/: catapult.sh  genCore.py
drivers/: hwSyscalls.c  linkerScript.ld
faultInjector/: FIRegInfo.py  faultInjector  histogramViewer_patterns  pipelineConsciousFI  probaErrorDistrib.xls  resviewer  resviewer_gateLevel  resviewercycleFaults  singleRegionViewer_histogram
include/: MemoryMap.h  UARTInterface.h  ac_int.h  alu.h  basic_simulator.h  ca_int.h  cache.h  cacheMemory.h  coherence.h  controller.h  core.h  csrUnit.h  elf.h  elfFile.h  expectALU.h  fault_inj_support.h  floatAlu.h  floatingPointUnit.h  incompleteMemory.h  logarithm.h  memory.h  memoryInterface.h  multicycleoperator.h  pipelineRegisters.h  portability.h  riscvISA.h  simpleMemory.h  simulator.h  tools.h
scripts/: catapult_asic.tcl  catapult_xilinx.tcl  vivado_artix7.tcl  vivado_xilinx.tcl  vivado_zynq7.tcl
src/: alu.cpp  atomicTest.cpp  basic_simulator.cpp  cache.cpp  coherence.cpp  controller.cpp  core.cpp  elfFile.cpp  fault_inj_support.cpp  generateDataBin.cpp  generateInstrBin.cpp  incompleteMemory.cpp  main.cpp  multiplicationUnit.cpp  reformeddm_sim.cpp  reqAck.cpp  riscvISA.cpp  simpleMemory.cpp  simulator.cpp  testFPU.cpp  testbench.cpp
tests/: expect.c  makefile  runTests.sh
tests/dct/: dct.c  dct.riscv32  dct.riscv32_hw  expectedOutput  makefile
(+21 files in other folders)
